--- a/index.html
+++ b/index.html
@@ -20,7 +20,33 @@
 <body>
     <!-- Header -->
     <header>
-
+        <div class="container flex">
+            <img src="img/logo.png" alt="Logo">
+            <a class="bars" href="">
+                <i class="fa-solid fa-bars"></i>
+            </a>
+            <nav class="menu">
+                <ul class="flex">
+                    <li>
+                        <a href="">Link</a>
+                    </li>
+                    <li>
+                        <a href="">Link</a>
+                    </li>
+                    <li>
+                        <a href="">Link</a>
+                    </li>
+                    <li>
+                        <a href="">Link</a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <div class="button">Link</div>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <!-- /Header -->
 
