--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <!-- Custom styles -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
