--- a/index.html
+++ b/index.html
@@ -53,7 +53,32 @@
 
     <!-- Main -->
     <main>
+        <!-- Section 1 -->
+        <div class="section-1">
+            <div class="container">
+                <div class="row">
+                    <div class="large-col">
+                        <div class="card"></div>
+                    </div>
+                    <div class="col">
+                        <div class="card"></div>
+                    </div>
+                </div>
 
+                <div class="row">
+                    <div class="col">
+                        <div class="card"></div>
+                    </div>
+                    <div class="col">
+                        <div class="card"></div>
+                    </div>
+                    <div class="col">
+                        <div class="card"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- /Section 1 -->
     </main>
     <!-- /Main -->
 
