--- a/index.html
+++ b/index.html
@@ -79,6 +79,21 @@
             </div>
         </div>
         <!-- /Section 1 -->
+
+        <!-- Section 2 -->
+        <div class="section-2">
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <div class="card"></div>
+                    </div>
+                    <div class="col">
+                        <div class="card"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- /Section 2 -->
     </main>
     <!-- /Main -->
 
