--- a/index.html
+++ b/index.html
@@ -29,20 +29,20 @@
             <nav class="menu">
                 <ul class="flex">
                     <li>
-                        <a href="">Link</a>
+                        <a href="">Planning</a>
                     </li>
                     <li>
-                        <a href="">Link</a>
+                        <a href="">Testimonials</a>
                     </li>
                     <li>
-                        <a href="">Link</a>
+                        <a href="">Features</a>
                     </li>
                     <li>
-                        <a href="">Link</a>
+                        <a href="">About Us</a>
                     </li>
                     <li>
                         <a href="">
-                            <div class="button">Link</div>
+                            <div class="button">Get Started</div>
                         </a>
                     </li>
                 </ul>
@@ -57,23 +57,57 @@
         <div class="section-1">
             <div class="container">
                 <div class="row">
-                    <div class="large-col">
-                        <div class="card"></div>
-                    </div>
                     <div class="col">
-                        <div class="card"></div>
+                        <!-- Card 1 -->
+                        <div class="card big-card flex">
+                            <h2 class="card-title">Get a demo application</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi excepturi laboriosam maiores tempora enim odio dolores voluptate doloribus magnam explicabo!</p>
+                            <a href="">
+                                <div class="button">
+                                    <i class="fa-brands fa-apple"></i>
+                                    <span>App Store</span>
+                                </div>
+                            </a>
+                            <img src="img/phone.png" alt="Phone">
+                        </div>
+                        <!-- /Card 1 -->
                     </div>
-                </div>
 
-                <div class="row">
                     <div class="col">
-                        <div class="card"></div>
+                        <!-- Card 2 -->
+                        <div class="card flex">
+                            <i class="card-icon fa-solid fa-file-code"></i>
+                            <h2 class="card-title">Clean Code</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi excepturi laboriosam maiores tempora enim odio dolores voluptate doloribus magnam explicabo!</p>
+                        </div>
+                        <!-- Card 2 -->
                     </div>
                     <div class="col">
-                        <div class="card"></div>
+                        <!-- Card 3 -->
+                        <div class="card flex">
+                            <i class="card-icon fa-solid fa-compass-drafting"></i>
+                            <h2 class="card-title">Web Design</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi excepturi laboriosam maiores tempora enim odio dolores voluptate doloribus magnam explicabo!</p>
+                        </div>
+                        <!-- Card 3 -->
                     </div>
                     <div class="col">
-                        <div class="card"></div>
+                        <!-- Card 4 -->
+                        <div class="card flex">
+                            <i class="card-icon fa-solid fa-laptop-code"></i>
+                            <h2 class="card-title">Development</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi excepturi laboriosam maiores tempora enim odio dolores voluptate doloribus magnam explicabo!</p>
+                        </div>
+                        <!-- Card 4 -->
+                    </div>
+                    <div class="col">
+                        <!-- Card 5 -->
+                        <div class="card flex">
+                            <i class="card-icon fa-solid fa-bullhorn"></i>
+                            <h2 class="card-title">Branding</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi excepturi laboriosam maiores tempora enim odio dolores voluptate doloribus magnam explicabo!</p>
+                        </div>
+                        <!-- Card 5 -->
                     </div>
                 </div>
             </div>
