Add: section 2 cards content

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                 <div class="row">
                     <div class="col">
                         <!-- Card 1 -->
-                        <div class="card big-card flex">
-                            <h2 class="card-title">Get a demo application</h2>
+                        <div class="card-1 flex">
+                            <h2 class="title-card">Get a demo application</h2>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi excepturi laboriosam maiores tempora enim odio dolores voluptate doloribus magnam explicabo!</p>
                             <a href="">
                                 <div class="button">
@@ -75,36 +75,36 @@
 
                     <div class="col">
                         <!-- Card 2 -->
-                        <div class="card flex">
-                            <i class="card-icon fa-solid fa-file-code"></i>
-                            <h2 class="card-title">Clean Code</h2>
+                        <div class="card-2 flex">
+                            <i class="icon-card fa-solid fa-file-code"></i>
+                            <h2 class="title-card">Clean Code</h2>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi excepturi laboriosam maiores tempora enim odio dolores voluptate doloribus magnam explicabo!</p>
                         </div>
                         <!-- Card 2 -->
                     </div>
                     <div class="col">
                         <!-- Card 3 -->
-                        <div class="card flex">
-                            <i class="card-icon fa-solid fa-compass-drafting"></i>
-                            <h2 class="card-title">Web Design</h2>
+                        <div class="card-3 flex">
+                            <i class="icon-card fa-solid fa-compass-drafting"></i>
+                            <h2 class="title-card">Web Design</h2>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi excepturi laboriosam maiores tempora enim odio dolores voluptate doloribus magnam explicabo!</p>
                         </div>
                         <!-- Card 3 -->
                     </div>
                     <div class="col">
                         <!-- Card 4 -->
-                        <div class="card flex">
-                            <i class="card-icon fa-solid fa-laptop-code"></i>
-                            <h2 class="card-title">Development</h2>
+                        <div class="card-4 flex">
+                            <i class="icon-card fa-solid fa-laptop-code"></i>
+                            <h2 class="title-card">Development</h2>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi excepturi laboriosam maiores tempora enim odio dolores voluptate doloribus magnam explicabo!</p>
                         </div>
                         <!-- Card 4 -->
                     </div>
                     <div class="col">
                         <!-- Card 5 -->
-                        <div class="card flex">
-                            <i class="card-icon fa-solid fa-bullhorn"></i>
-                            <h2 class="card-title">Branding</h2>
+                        <div class="card-5 flex">
+                            <i class="icon-card fa-solid fa-bullhorn"></i>
+                            <h2 class="title-card">Branding</h2>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi excepturi laboriosam maiores tempora enim odio dolores voluptate doloribus magnam explicabo!</p>
                         </div>
                         <!-- Card 5 -->
@@ -119,10 +119,21 @@
             <div class="container">
                 <div class="row">
                     <div class="col">
-                        <div class="card"></div>
+                        <div class="card-1 flex">
+                            <img src="img/planning1.png" alt="Planning 1">
+                            <h2 class="title-card">Strategic Planning</h2>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis alias, facilis soluta porro nesciunt ab nobis et, inventore quod tempore blanditiis dolor possimus explicabo quas magni dolore praesentium natus ad.</p>
+                        </div>
                     </div>
                     <div class="col">
-                        <div class="card"></div>
+                        <div class="card-2 flex">
+                            <img src="img/planning2.png" alt="Planning 2">
+                            <h2 class="title-card">App development</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, reiciendis officia vero natus fugit magnam reprehenderit odio optio soluta harum.</p>
+                            <a href="">
+                                <i class="fa-solid fa-arrow-down-long"></i>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
