Add: section 1 and 2 corrections

--- a/index.html
+++ b/index.html
@@ -59,16 +59,23 @@
                 <div class="row">
                     <div class="col">
                         <!-- Card 1 -->
-                        <div class="card-1 flex">
-                            <h2 class="title-card">Get a demo application</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi excepturi laboriosam maiores tempora enim odio dolores voluptate doloribus magnam explicabo!</p>
-                            <a href="">
-                                <div class="button">
-                                    <i class="fa-brands fa-apple"></i>
-                                    <span>App Store</span>
+                        <div class="card-1">
+                            <div class="row-card">
+                                <div class="col-card-1">
+                                    <h2 class="title-card">Get a demo application</h2>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi excepturi laboriosam maiores tempora enim odio dolores voluptate doloribus magnam explicabo!</p>
+                                    <a href="">
+                                        <div class="button">
+                                            <i class="fa-brands fa-apple"></i>
+                                            <span>App Store</span>
+                                        </div>
+                                    </a>
                                 </div>
-                            </a>
-                            <img src="img/phone.png" alt="Phone">
+
+                                <div class="col-card-2 flex">
+                                    <img src="img/phone.png" alt="Phone">
+                                </div>
+                            </div>
                         </div>
                         <!-- /Card 1 -->
                     </div>
@@ -125,7 +132,7 @@
                             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis alias, facilis soluta porro nesciunt ab nobis et, inventore quod tempore blanditiis dolor possimus explicabo quas magni dolore praesentium natus ad.</p>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col flex">
                         <div class="card-2 flex">
                             <img src="img/planning2.png" alt="Planning 2">
                             <h2 class="title-card">App development</h2>
