Add: section 3 cards content

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -62,7 +62,7 @@
                         <div class="card-1">
                             <div class="row-card">
                                 <div class="col-card-1">
-                                    <h2 class="title-card">Get a demo application</h2>
+                                    <h3 class="title-card">Get a demo application</h3>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi excepturi laboriosam maiores tempora enim odio dolores voluptate doloribus magnam explicabo!</p>
                                     <a href="">
                                         <div class="button">
@@ -84,7 +84,7 @@
                         <!-- Card 2 -->
                         <div class="card-2 flex">
                             <i class="icon-card fa-solid fa-file-code"></i>
-                            <h2 class="title-card">Clean Code</h2>
+                            <h3 class="title-card">Clean Code</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi excepturi laboriosam maiores tempora enim odio dolores voluptate doloribus magnam explicabo!</p>
                         </div>
                         <!-- Card 2 -->
@@ -93,7 +93,7 @@
                         <!-- Card 3 -->
                         <div class="card-3 flex">
                             <i class="icon-card fa-solid fa-compass-drafting"></i>
-                            <h2 class="title-card">Web Design</h2>
+                            <h3 class="title-card">Web Design</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi excepturi laboriosam maiores tempora enim odio dolores voluptate doloribus magnam explicabo!</p>
                         </div>
                         <!-- Card 3 -->
@@ -102,7 +102,7 @@
                         <!-- Card 4 -->
                         <div class="card-4 flex">
                             <i class="icon-card fa-solid fa-laptop-code"></i>
-                            <h2 class="title-card">Development</h2>
+                            <h3 class="title-card">Development</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi excepturi laboriosam maiores tempora enim odio dolores voluptate doloribus magnam explicabo!</p>
                         </div>
                         <!-- Card 4 -->
@@ -111,7 +111,7 @@
                         <!-- Card 5 -->
                         <div class="card-5 flex">
                             <i class="icon-card fa-solid fa-bullhorn"></i>
-                            <h2 class="title-card">Branding</h2>
+                            <h3 class="title-card">Branding</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi excepturi laboriosam maiores tempora enim odio dolores voluptate doloribus magnam explicabo!</p>
                         </div>
                         <!-- Card 5 -->
@@ -128,14 +128,14 @@
                     <div class="col">
                         <div class="card-1 flex">
                             <img src="img/planning1.png" alt="Planning 1">
-                            <h2 class="title-card">Strategic Planning</h2>
+                            <h3 class="title-card">Strategic Planning</h3>
                             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis alias, facilis soluta porro nesciunt ab nobis et, inventore quod tempore blanditiis dolor possimus explicabo quas magni dolore praesentium natus ad.</p>
                         </div>
                     </div>
                     <div class="col flex">
                         <div class="card-2 flex">
                             <img src="img/planning2.png" alt="Planning 2">
-                            <h2 class="title-card">App development</h2>
+                            <h3 class="title-card">App development</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, reiciendis officia vero natus fugit magnam reprehenderit odio optio soluta harum.</p>
                             <a href="">
                                 <i class="fa-solid fa-arrow-down-long"></i>
@@ -146,6 +146,78 @@
             </div>
         </div>
         <!-- /Section 2 -->
+
+        <!-- Section 3 -->
+        <div class="section-3">
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <!-- Card 1 -->
+                        <div class="card-1 flex">
+                            <h1 class="section-title">Testimonials</h1>
+                            <h2 class="section-subtitle">We are committed expert partners</h2>
+                            <p>We place huge value strong relantionships and have seen the benefit they bring to our business Customer feedback is vital in helping us to get it right.</p>
+                        </div>
+                        <!-- /Card 1 -->
+                    </div>
+                    <div class="col">
+                        <!-- Card 2 -->
+                        <div class="card-2 flex">
+                            <div class="image">
+                                <img src="img/testimonial1.jpg" alt="Nat Reynolds">
+                            </div>
+
+                            <div class="text">
+                                <p>
+                                    <i class="fa-solid fa-quote-left"></i>
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores, perspiciatis. Quo amet accusamus a enim dolorum quia quidem adipisci neque officiis.
+                                    <i class="fa-solid fa-quote-right"></i>
+                                </p>
+                                <h3 class="title-card">Nat Reynolds</h3>
+                            </div>
+                        </div>
+                        <!-- /Card 2 -->
+                    </div>
+                    <div class="col">
+                        <!-- Card 3 -->
+                        <div class="card-3 flex">
+                            <div class="image">
+                                <img src="img/testimonial2.jpg" alt="Celia Almeda">
+                            </div>
+
+                            <div class="text">
+                                <p>
+                                    <i class="fa-solid fa-quote-left"></i>
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores, perspiciatis. Quo amet accusamus a enim dolorum quia quidem adipisci neque officiis.
+                                    <i class="fa-solid fa-quote-right"></i>
+                                </p>
+                                <h3 class="title-card">Celia Almeda</h3>
+                            </div>
+                        </div>
+                        <!-- /Card 3 -->
+                    </div>
+                    <div class="col">
+                        <!-- Card 4 -->
+                        <div class="card-4 flex">
+                            <div class="image">
+                                <img src="img/testimonial3.jpg" alt="Bob Roberts">
+                            </div>
+
+                            <div class="text">
+                                <p>
+                                    <i class="fa-solid fa-quote-left"></i>
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores, perspiciatis. Quo amet accusamus a enim dolorum quia quidem adipisci neque officiis.
+                                    <i class="fa-solid fa-quote-right"></i>
+                                </p>
+                                <h3 class="title-card">Bob Roberts</h3>
+                            </div>
+                        </div>
+                        <!-- /Card 4 -->
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- /Section 3 -->
     </main>
     <!-- /Main -->
 
